--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body, html {
-  background-color: black;
+  background-color: rgb(15, 15, 15);
   font-family: "Lucida Console";
   font-size: 14pt;
   overflow-x: hidden;
@@ -54,7 +54,7 @@ h2 {
   line-height: 210%;
   width: 90%;
   color: rgb(255, 252, 237);
-  background-color: black;
+  background-color: rgb(15, 15, 15);
   padding-left: 10px;
 }
 
@@ -64,20 +64,21 @@ h2 {
   top: -20px;
   left: 50%;
   transform: translate(-50%, 0);
-  border: 3px solid black;
+  border: 4px solid rgb(15, 15, 15);
   margin: 0;
   height: 300px;
   resize: none;
   font-family: warFrame99;
-  font-size: 36pt;
+  font-size: 50pt;
   padding-left: 18px;
   outline: none;
+  background-color: rgb(255, 252, 237);
 }
 
 #current {
   position: fixed;
   width: 75px;
-  border: 3px solid black;
+  border: 3px solid rgb(15, 15, 15);
   margin: 0;
   left: 94px;
   top: 600px;
@@ -87,7 +88,7 @@ h2 {
   color: rgb(255, 252, 237);
   font-size: 30pt;
   outline: none;
-  background-color: black;
+  background-color: rgb(15, 15, 15);
   z-index: 5;
   text-align: center;
 }
@@ -95,14 +96,14 @@ h2 {
 #string {
   position: fixed;
   width: 84%;
-  border: 3px solid black;
+  border: 4px solid rgb(15, 15, 15);
   margin: 0;
   left: 178px;
   top: 600px;
-  height: 50px;
+  height: 48px;
   resize: none;
   font-family: warframe99;
-  color: black;
+  color: rgb(15, 15, 15);
   font-size: 30pt;
   outline: none;
   background-color: rgb(255, 252, 237);
@@ -113,3 +114,21 @@ h2 {
   padding-top: 10px;
 }
 
+.corruption {
+  top: -40px;
+}
+
+#seek {
+  position: absolute;
+  left: 200px;
+  top: 400px;
+  transform: translate(0%, 0%);
+  font-family: msDos;
+  font-size: 40pt;
+  font-weight: lighter;
+  line-height: 210%;
+  width: 70%;
+  color: rgb(15, 15, 15);
+  background-color: rgb(255, 252, 237);
+  padding-left: 10px;
+}
